--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <html>
-    <head>
-        <title>To Do Application</title>
-    </head>
-    <body>
-        <p>
-            <h1><b>Hey You!!</b></h1>
-        </p>
-    </body>
+<head>  
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins"> 
+    <link rel="stylesheet" href="style.css">
+</head>
+<body> 
+    <div id="centerElement">
+        <h3 id="font">To Do Application</h3>
+        <p id="fontpara">Write your todo's to track your progress!</p>    
+        <input type="text" id="inputField"  placeholder="Enter Your task">
+        <button id= "addbutton" id="addButton" onclick="addListItem()">Add!</button>
+        <ul id="userList"></ul>
+        <script src="script.js"></script>
+    </div>
+</body>
 </html>
